style-dark.css
/* ... */
span.news-item-count {
    float: right;
    margin: 0;
    background: var(--transparent);
}
a.module-item.mod-featured {
    background: var(--tf2stream);
    border-left: solid 3px var(--hlcolour)!important;
    border-bottom: solid 1px var(--tf2streamborder);
    /* inset box shadow */
}
a:link,
a:visited,
a:active {
    color: var(--linkcolour);
}
.module-header {
    background: var(--transparent) !important;
    background-color: var(--transparent) !important;
    height: 30px;
    text-align: left;
    padding-left: 3px;
    border-bottom: 0px !important;
    box-shadow: 0 0 0 0;
    z-index: auto;
    text-shadow: 0 0 0;
}
module-header:hover {
    background: var(--transparent) !important;
    background-color: var(--transparent) !important;
    height: 30px;
    text-align: left;
    padding-left: 3px;
    border: 0;
    border-bottom: 0px !important;
    box-shadow: 0 0 0 0;
}
#h-s-header {
    background: var(--tableheader);
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.22);
}
#schedule-table td:first-child {
    color: var(--textcolour2);
    border-left: 1px solid #5b6167;
    border-right: 1px solid #5b6167;
}
#schedule-table td:nth-child(2) {
    color: var(--textcolour2);
    border-right: 1px solid #5b6167;
}
.list-table td {
    color: var(--textcolour2);
    border-color: #5b6167 !important;
    box-shadow:0 0 0!important;
}
.list-table tr:last-child td:last-child {
    border-bottom: 1px solid #5b6167;
}

#schedule-table td:first-child {
    border-bottom: 1px solid #5b6167;
}
#gallery-name {
    color: var(--textcolour2);
}
#schedule-table td {
    border-bottom: 1px solid #5b6167;
    border-right: 1px solid #5b6167;
}
.list-table td {
    border-bottom: 1px solid #5b6167;
}
.module-filter-menu {
    line-height: 14px;
    font-size: 15px;
    background: var(--fgcolour);
    color: var(--textcolour2);
    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.4);
    border-bottom: 0;
}
#event-info .event-section {
    border-right: 0;
    background-color: var(--sbcolour);
}
#event-desc {
    border-top: 0;
    background-color: var(--tablebgcolour);
}
a.module-header {
    color: var(--sbtitle) !important;
    font-size: 12px;
    border-bottom: 1px solid #4c545d !important;
}
a.module-item {
    line-height: 22px;
    background: var(--sbcolour);
    border-bottom: 1px solid #4c545d;
    box-shadow: 0 2px 3px -1px rgba(0, 0, 0, 0.4);
}
a.module-item:hover {
    background: var(--sbhover);
}
a.module-item > :first-child {
    border-radius: 3px;
}
a.module-item.mod-last {
    border-bottom: 0;
    border-radius: 0;
}
e-item.mod-last:hover {
    border-radius: 0;
    border-bottom: 0;
}
.thread-header-title {
    color: var(--textcolour2);
    display: flex;
    padding-left: 25px;
    padding-top: 18px;
}
.thread-header-desc {
    color: var(--textcolour);
    display: block;
    padding-left: 25px;
    padding-bottom: 22px;
}
div#thread-list {
    width: 760px;
    background: var(--fgcolour);
    padding: 0px 0px;
    box-shadow: 0 0 6px rgba(0, 0, 0, 0.22);
    border: 0;
}
div.thread-inner {
    padding: 1px 7px;
    border-top: 1px solid var(--bordercolour);
}
.action-container {
    margin-top: 2px;
    margin-bottom: 10px;
}
div.thread {
    min-height: 56px;
    height: auto;
    margin-bottom: 0px;
    font-family: 'Roboto', sans-serif;
    font-size: 12px;
    color: var(--textcolour2);

}
div.thread:hover {
    background: var(--searchbg);
}
#search-bar {
    height: 42px;
}
div.blockr.pages {
    font-size: 12px;
    width: 150px;
    border: 0;
    margin-top: 5px;
    color: var(--textcolour);
    padding-right: 2px;
}
.blockr.pages .post-count {
    color: var(--textcolour) !important;
}
.block.frag .frag-count {
    color: var(--sbtextcolour);
    font-weight: normal;
}
.blockr.post-count {
    color: var(--textcolour2) !important;
}
.thread-frag-btn.plus #thread-frag-count {
    background: var(--fragcount);
}
div.blockr.last-info {
    font-size: 12px;
    border: 0;
    margin-top: 7px;
    padding-right: 6px;
    height: 100% !important;
}
div.post-body {
    color: var(--textcolour2) !important;
}
div.post-footer {
    background: var(--postbg);
    color: var(--sbtextcolour);
    border: 0;
}
.btn,
a.btn {
    font-weight: 500;
    height: 42px;

    line-height: 42px;
    font-size: 11px;
    box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.4) !important;
    border-radius: 3px;
    border: 0 !important;
    background: var(--btncolour);
    color: var(--linkcolour);
    position: relative;
}
.btn:not(.clicked):not(:active)::before {
    background: var(--btnaccent) !important;
    top: 0px;
    left: 1px;
    height: 1px;
    width: calc(100% - 2px);
    position: absolute;
    content: '';
    border-top-left-radius: 3px;
    border-bottom-right-radius: 3px;
}
.tab-opt.active,
.tab-opt:active {
    font-weight: normal;
}
.thread-frag-btn.plus.clicked:hover {
    background: #78b186;
}
.thread-frag-btn.minus.clicked:hover {
    background: #b36060;
}
.btn.is-clicked {
    background: var(--btncolour) !important;
    box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.25) !important;
}
.btn.is-clicked:hover {
    background: var(--btncolour2) !important;
    box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.25) !important;
}
.btn:focus:hover {
    background: var(--btncolour) !important;
}
.btn.is-clicked::before {
    width: 0;
}
.btn:not(.mod-active):active {
    background: var(--btncolour2);
    box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.45);
}
.btn.mod-action:hover,
.btn.mod-action:focus {
    background: var(--btnmodactionhover) !important;
}
.btn.mod-action::before {
    height: 0 !important;
}
.btn.mod-action {
    background: var(--btnmodaction) !important;
    color: var(--textcolour3);
}
.btn.mod-active:hover {
    box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.25) !important;
}
.btn:hover:active {
    box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.25) !important;
}
.btn:hover {
    background: var(--btncolour2);
}
/* ... */

